commeted out the login reset ps and others leaving the singup related files.
