# fullstack/lib/type/auth.types.ts
@@ -1,7 +1,7 @@
-export interface LoginRequest {
-  emailOrUsername: string; 
-  password: string;
-}
+// export interface LoginRequest {
+//   emailOrUsername: string; 
+//   password: string;
+// }
 
 export interface SignupRequest {
   username: string;
@@ -10,16 +10,16 @@ export interface SignupRequest {
   confirmPassword: string;  
 }
 
-export interface ResetPasswordRequest {
-  email: string;
-}
+// export interface ResetPasswordRequest {
+//   email: string;
+// }
 
-export interface VerifyResetPinRequest {
-  email: string;
-  pin: string;
-  newPassword: string;
-  confirmPassword: string;
-}
+// export interface VerifyResetPinRequest {
+//   email: string;
+//   pin: string;
+//   newPassword: string;
+//   confirmPassword: string;
+// }
 
 export interface AuthResponse {
   success: boolean;
@@ -33,7 +33,7 @@ export interface AuthResponse {
 }
 
 // Add this interface to your existing auth.types.ts
-export interface GoogleAuthRequest {
-    code: string;
-  }
+// export interface GoogleAuthRequest {
+//     code: string;
+//   }
   
